# serializer version: 1
# name: test_upgrade[after]
  list([
    dict({
      '_id': 'sample_1',
      'labels': list([
        1,
        2,
      ]),
      'name': 'has_both',
      'notes': 'existing notes',
    }),
    dict({
      '_id': 'sample_2',
      'labels': list([
        3,
        4,
      ]),
      'name': 'has_labels',
      'notes': '',
    }),
    dict({
      '_id': 'sample_3',
      'labels': list([
      ]),
      'name': 'has_notes',
      'notes': 'only has notes',
    }),
    dict({
      '_id': 'sample_4',
      'labels': list([
      ]),
      'name': 'has_neither',
      'notes': '',
    }),
  ])
# ---
# name: test_upgrade[before]
  list([
    dict({
      '_id': 'sample_1',
      'labels': list([
        1,
        2,
      ]),
      'name': 'has_both',
      'notes': 'existing notes',
    }),
    dict({
      '_id': 'sample_2',
      'labels': list([
        3,
        4,
      ]),
      'name': 'has_labels',
    }),
    dict({
      '_id': 'sample_3',
      'name': 'has_notes',
      'notes': 'only has notes',
    }),
    dict({
      '_id': 'sample_4',
      'name': 'has_neither',
    }),
  ])
# ---
